--- a/ApiGateway/package.json
+++ b/ApiGateway/package.json
@@ -16,7 +16,9 @@
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0"
+    "kafkajs": "^2.2.4",
+    "mongoose": "^8.7.0",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
