orders-service: test

--- a/services/orders/tsconfig.json
+++ b/services/orders/tsconfig.json
@@ -10,5 +10,6 @@
     "outDir": "./dist",
     "esModuleInterop": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["./dist", "__tests__", "jest.config.js"]
 }
