--- a/gateway/package.json
+++ b/gateway/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "USERS_SERVICE_URL=http://localhost:3001 ORDERS_SERVICE_URL=http://localhost:3002 PRODUCTS_SERVICE_URL=http://localhost:3003 jest --coverage",
     "start": "tsc -p tsconfig.json && node dist/index.js"
   },
   "keywords": [],
@@ -22,7 +23,15 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "nock": "^13.5.5",
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
 }
